# blackroad-pi-ops

./: .env.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLANNING.md  README.md  app.py  clerk-config.json  install-pi-agent.sh  pyproject.toml  railway.toml  requirements.txt  service-mesh.json  stripe-config.json  wrangler.toml
.github/workflows/: ci-cd.yml  ci.yml
pi_agent/: __init__.py  connection.py  main.py
tests/: test_app.py  test_config.py  test_executor.py  test_led_bridge.py  test_scheduler.py  test_screen_renderer.py
