[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackroad-pi-ops"
version = "1.0.0"
description = "Edge device management for Raspberry Pi and Jetson - LED control, screen rendering, and hardware interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "BlackRoad OS", email = "hello@blackroad.io" }
]
keywords = [
    "raspberry-pi",
    "jetson",
    "edge-computing",
    "iot",
    "led",
    "hardware",
    "embedded"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "paho-mqtt>=1.6.1",
    "pyyaml>=6.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO>=0.7.0",
    "rpi_ws281x>=4.3.0",
    "spidev>=3.6",
]
agent = [
    "websockets>=11.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pi-ops = "app:main"
led-bridge = "led_bridge:main"
pi-agent = "pi_agent.main:main"

[project.urls]
Homepage = "https://blackroad.io"
Documentation = "https://docs.blackroad.io/pi-ops"
Repository = "https://github.com/BlackRoad-OS/blackroad-pi-ops"
Issues = "https://github.com/BlackRoad-OS/blackroad-pi-ops/issues"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
include = [
    "app.py",
    "led_bridge.py",
    "screen_renderer.py",
    "pi_agent/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
